--- a/app/views/deals/_body_stores.html.erb
+++ b/app/views/deals/_body_stores.html.erb
@@ -111,7 +111,7 @@
              <% if md.sd_spare_31.present? %>
               <span><em><%= number_to_currency(md.sd_spare_31) %></em> <%= number_to_currency(md.sd_spare_32) %> </span>
              <% else %>
-              <span><em><%= number_to_currency(md.sd_spare_33) %></em> <%= number_to_currency(md.sd_spare_34) %> | @<%= md.sdcategory.name %></span>
+              <span><em><%= number_to_currency(md.sd_spare_33) %></em> <%= number_to_currency(md.sd_spare_34) %></span>
              <% end %>
             </div>
            </div>
