--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -67,7 +67,7 @@ header .gnb_pc>a>.oh_logo{display:none;}
 header .visual{}
 header .visual img{width:100%;}
 
-header .gnb_pc>ul{float:right;margin-top:-6px;position:relative;font-family: 'Righteous', cursive;}
+header .gnb_pc>ul{float:right;margin-top:-6px;position:relative;font-family: 'Righteous', cursive;margin-left:50px;}
 header .gnb_pc>ul>li.membership>a{font-size:20px;}
 header .gnb_pc>ul.sub_index_02{float:left;} /* for index_02 */
 header .gnb_pc>ul>li{float:left;width:340px;text-align:center;}
@@ -88,10 +88,10 @@ header .gnb_m,header .gnb_open2{display:none;}
   header.on .gnb_pc>a>.oh_logo{display:inline-block;float:left;width:50px;height:50px;margin:11px 10px 0 0;}
   header.on .visual{float:left;margin-top:18px;height:100%;}
   header.on .visual img{width:260px;}
-  header.on .gnb_pc>ul{float:left;margin:0 0 0 0;padding:10px 0;}
-  header.on .gnb_pc>ul>li{float:left;width:150px;font-weight:400;text-align:center;}
-  header.on .gnb_pc>ul>li:nth-child(3){width:160px;}
-  header.on .gnb_pc>ul>li>a{font-size:20px;line-height:50px;}
+  header.on .gnb_pc>ul{float:left;margin:0 0 0 20px;padding:10px 0;}
+  header.on .gnb_pc>ul>li{float:left;width:100px;font-weight:400;text-align:center;}
+  header.on .gnb_pc>ul>li:nth-child(3){width:100px;}
+  header.on .gnb_pc>ul>li>a{font-size:15px;line-height:50px;}
   header.on .gnb_pc>ul>li>a.active{background:#000;padding:0 10px;color:#fff;}
   header.on .gnb_pc>ul>li>a>em{display:inline-block;}
   header.on .gnb_pc>ul>li>a>span{display:none;}
