--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -121,7 +121,7 @@
 
 .deals_card{float:left;font-family:'Raleway', Arial, sans-serif;position:relative;overflow:hidden;margin:1%;width:23%;background:#fff;text-align:left;color:#000000;box-shadow:0 0 5px rgba(0, 0, 0, 0.15);font-size:16px;-webkit-transform:translateZ(0);transform:translateZ(0);-webkit-perspective:20em;perspective:20em;}
 .deals_card *{-webkit-box-sizing:border-box;box-sizing:border-box;-webkit-transition:all 0.3s ease-out;transition:all 0.3s ease-out;}
-.deals_card .image_box{width:100%;height:250px;padding:15px 15px 5px 15px;position:relative;}
+.deals_card .image_box{width:100%;height:250px;padding:25px 25px 10px 25px;position:relative;}
 .deals_card .image_box .mark{position:absolute;top:0;left:0;background:#000;color:#fff;width:50px;padding:7px;line-height:1.1;font-size:13px;text-align:center;}
 .deals_card .image_box .mark span{letter-spacing:3.1px;}
 .deals_card .image_box .mark em{display:block;letter-spacing:3.1px;}
@@ -168,10 +168,10 @@
   .more_search input{width:100%;border:1px solid #ccc;}
   .deals_card{width:48%;}
   .deals_card .buy-now{display:none;}
-  .deals_card .image_box{height:200px;padding:0;}
+  .deals_card .image_box{height:200px;padding:20px;}
   .deals_card .image_box .expried_wrap .mark_expried{width:55px;height:30px;}
   .deals_card .image_box .mark_expried p{font-size:10px;font-weight:bold;}
-  .deals_card .image_box .mark{font-size:11px;font-weight:600;width:60px;padding:3px;height:35px;}
+  .deals_card .image_box .mark{font-size:11px;font-weight:600;width:60px;padding:3px;height:30px;}
   .deals_card .image_box .exprie p{margin-top:9px;}
   .deals_card h3{font-size:14px;}
   .deals_card p{font-size:13px;line-height:1.2;height:3.6em;}
