--- a/app/assets/stylesheets/store.css
+++ b/app/assets/stylesheets/store.css
@@ -153,7 +153,6 @@
 .sub_nav .sub_nav_pc>ul>li.sd_all>a.active{background:#fff;border-bottom:none;}
 .sd_category div p span{background:#ffff00;padding:0 7px;}
 
-
 .store_top{}
 .store_top .st_top_box{float:left;width:48%;margin:1%;border:1px solid;} 
 .store_top .st_top_box .image{float:left;width:30%;}
@@ -162,41 +161,21 @@
 
 
 
-
-
-
-/* General styling */
-
-
-.form_popup .trigger{
-  font-size: 2em;
-  text-transform: uppercase;
-  margin-top: 10%;
-  display: block;
-  position:fixed;top:0;right:100px;
-}
-
-.form_popup .popup__textbox{
-  color: #b43d54;
-  line-height: 25px;
-  font-size: 1.1em;
-  letter-spacing: 1px;  
-}
-
-.form_popup table {
-  border-collapse: collapse;
-  width: 100%;
-  font-size:11px;
-}
-
-.form_popup th, td {
-  padding: 8px;
-  text-align: left;
-  border-bottom: 1px solid #ddd;
-}
-
+/* Store Promotions Sites Info for Form Page */
+.form_popup .trigger{font-size:2em;margin-top:10%;display:block;position:fixed;top:0;right:100px;}
+.form_popup .popup__textbox{color:#b43d54;line-height:25px;font-size:1.1em;letter-spacing:1px;}
+.form_popup table{border-collapse:collapse;width:100%;font-size:11px;}
+.form_popup th, td{padding:8px;text-align:left;border-bottom:1px solid #ddd;}
+.form_popup .popup__check{display:none;}
+.form_popup .popup__base, .popup__bg{position:fixed;top:0;right:0;bottom:0;left:0;opacity:0;cursor:zoom-out;}
+.form_popup .popup__base{background-color:rgba(0,0,0,0.5);display:none;}
+.form_popup .popup__check:checked + .popup__base{display:block;animation-name:bg;animation-duration:.5s;animation-fill-mode:forwards;-webkit-animation-name:bg;-webkit-animation-duration:.5s;-webkit-animation-fill-mode:forwards;}
+.form_popup .popup__inner{position:absolute;z-index:10;width:70%;height:70%;background-color:#fff;top:15%;left:15%;display:block;cursor:default;}
+.form_popup .popup__check:checked + .popup__base .popup__inner{animation-name:inner;animation-duration:.5s;animation-fill-mode:forwards;-webkit-animation-name:inner;-webkit-animation-duration:.5s;-webkit-animation-fill-mode:forwards;}
+.form_popup .popup__textbox{height:95%;width:100%;padding-left:2.5%;padding-right:2.5%;margin-top:10px;overflow:auto;}
+.form_popup .popup__calign{float:right;padding-right:60px;font-size:50px;}
+.form_popup .popup__close{-webkit-transform:rotate(45deg);-moz-transform:rotate(45deg);-ms-transform:rotate(45deg);-o-transform:rotate(45deg);display:block;position:absolute;z-index:10;text-align:right;cursor:pointer;color:#b43d54;}
 /* Start popup css */
-
 @keyframes bg {
     from {opacity: 0;}
     to {opacity: 1;}
@@ -205,7 +184,7 @@
 @keyframes inner {
     0% {transform: scale(0.8);}
     50% {transform: scale(1.06);}
-  100% {transform: scale(1);}
+    100% {transform: scale(1);}
 }
 
 @-webkit-keyframes bg {
@@ -216,87 +195,8 @@
 @-webkit-keyframes inner {
     0% {transform: scale(0.8);}
     50% {transform: scale(1.06);}
-  100% {transform: scale(1);}
+    100% {transform: scale(1);}
 }
-
-.form_popup .popup__check{
-  display: none;
-}
-
-.form_popup .popup__base, .popup__bg{
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  opacity: 0;
-  cursor:zoom-out;
-}
-
-.form_popup .popup__base{
-  background-color: rgba(0,0,0,0.5);
-  display: none;
-}
-
-.form_popup .popup__check:checked + .popup__base{
-  display: block;
-  animation-name: bg;
-    animation-duration: .5s;
-  animation-fill-mode:forwards;
-  -webkit-animation-name: bg;
-    -webkit-animation-duration: .5s;
-  -webkit-animation-fill-mode:forwards;
-}
-
-.form_popup .popup__inner{
-  position: absolute;
-  z-index: 10;
-  width: 70%;
-  height: 70%;
-  background-color: #fff;
-  top: 15%;
-  left: 15%;
-  display: block;
-  cursor:default;
-}
-
-.form_popup .popup__check:checked + .popup__base .popup__inner{
-  animation-name: inner;
-    animation-duration: .5s;
-  animation-fill-mode:forwards;
-  -webkit-animation-name: inner;
-    -webkit-animation-duration: .5s;
-  -webkit-animation-fill-mode:forwards;
-}
-
-.form_popup .popup__textbox{
-  height: 95%;
-  width: 100%;
-  padding-left: 2.5%;
-  padding-right: 2.5%;
-  margin-top: 10px;
-  overflow: auto;
-}
-
-.form_popup .popup__calign{
-  float: right;
-  padding-right: 60px;
-  font-size: 50px;
-}
-
-.form_popup .popup__close{
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  display: block;
-  position: absolute;
-  z-index: 10;
-  text-align: right;
-  cursor: pointer;
-  color: #b43d54;
-}
-
 
 
 
