--- a/app/views/promocodes/_promocode.html.erb
+++ b/app/views/promocodes/_promocode.html.erb
@@ -1,37 +1,48 @@
 <!-- < @promocodes.each do |promocode| > -->
 <figure class="deals_card">
-  <% if promocode.p_spare_50 && (promocode.p_spare_50 < DateTime.now) %>
-   <% promocode.p_spare_50 %>
-   <div class="image_box">
-    <div class="expried">
+  <!-- Start Image Section -->
+  <% if promocode.p_end_date.present? %>
+    <% if promocode.p_spare_50 && (promocode.p_spare_50 < DateTime.now) %>
+     <% promocode.p_spare_50 %>
+     <div class="image_box">
+      <div class="expried">
+        <% if promocode.p_image.present? %>
+          <%= link_to image_tag(promocode.p_image, alt: promocode.p_title, title: promocode.p_image_title), promocode %>
+        <% else %>
+          <%= link_to (image_tag promocode.pimage.url(:small), alt: promocode.p_title, title: promocode.p_image_title), promocode %>
+        <% end %>
+      </div>
+        <div class="expried_wrap"><div class="mark term exprie"><p>EXPIRED</p></div></div>
+     </div>
+    <% else %>
+     <div class="image_box">
       <% if promocode.p_image.present? %>
         <%= link_to image_tag(promocode.p_image, alt: promocode.p_title, title: promocode.p_image_title), promocode %>
       <% else %>
         <%= link_to (image_tag promocode.pimage.url(:small), alt: promocode.p_title, title: promocode.p_image_title), promocode %>
       <% end %>
-    </div>
-    <div class="expried_wrap"><div class="mark term exprie"><p>EXPIRED</p></div></div>
-   </div>
-  <% else %>
-   <div class="image_box">
-    <% if promocode.p_image.present? %>
-      <%= link_to image_tag(promocode.p_image, alt: promocode.p_title, title: promocode.p_image_title), promocode %>
-    <% else %>
-      <%= link_to (image_tag promocode.pimage.url(:small), alt: promocode.p_title, title: promocode.p_image_title), promocode %>
-    <% end %>
-    
-      <% if promocode.p_spare_51 && (promocode.p_spare_51 <= DateTime.now) %>
-      <% promocode.p_spare_51 %>
-        <% if promocode.p_spare_51.present? %>
-          <div class="expried_wrap"><div class="mark term endtoday"><p><span><%= number_to_percentage(promocode.p_spare_27, precision: 0) %> OFF</span>Ends Today</p></div></div>
+        <% if promocode.p_spare_51 && (promocode.p_spare_51 <= DateTime.now) %>
+        <% promocode.p_spare_51 %>
+          <% if promocode.p_spare_51.present? %>
+            <div class="expried_wrap"><div class="mark term endtoday"><p><span><%= number_to_percentage(promocode.p_spare_27, precision: 0) %> OFF</span>Ends Today</p></div></div>
+          <% end %>
+        <% else %>
+          <div class="mark"><span><%= number_to_percentage(promocode.p_spare_27, precision: 0) %></span><em>OFF</em></div>
         <% end %>
+       </div>
+    <% end %>
+  <% else %>
+    <div class="image_box">
+      <% if promocode.p_image.present? %>
+        <%= link_to image_tag(promocode.p_image, alt: promocode.p_title, title: promocode.p_image_title), promocode %>
       <% else %>
-        <div class="mark"><span><%= number_to_percentage(promocode.p_spare_27, precision: 0) %></span><em>OFF</em></div>
+        <%= link_to (image_tag promocode.pimage.url(:small), alt: promocode.p_title, title: promocode.p_image_title), promocode %>
       <% end %>
-
-   </div>
+      <div class="mark"><span><%= number_to_percentage(promocode.p_spare_27, precision: 0) %></span><em>OFF</em></div>
+    </div>
   <% end %>
-   
+  <!-- End Image Section--> 
+
   <div class="buy-now"><span><%= link_to "GET CODE", promocode %></span></div>
   <figcaption>
     <h3><%= render_with_phashtags(promocode.p_hashtag.to_s) %></h3>
