--- a/app/views/hotdeals/hashtags.html.erb
+++ b/app/views/hotdeals/hashtags.html.erb
@@ -19,7 +19,13 @@
             <% else %>
              <%= link_to (image_tag hotdeal.himage.url(:small), alt: hotdeal.h_title, title: hotdeal.h_spare_04), hotdeal %>
             <% end %>
-            <div class="mark"><span><%= hotdeal.h_percentage %>%</span><em>OFF</em></div>
+            <%if hotdeal.h_percentage.present? %>
+              <div class="mark"><span><%= hotdeal.h_percentage %>%</span><em>OFF</em></div>
+            <% else %>
+              <% running_total = 0 %>
+              <% running_total =  (hotdeal.h_spare_43 - hotdeal.h_spare_44) / hotdeal.h_spare_43 * 100 %>
+              <div class="mark"><span><%= number_to_percentage(running_total, precision: 0) %></span><em>OFF</em></div>
+            <% end %>
           </div>
           <div class="buy-now"><span><a target="_blank" href="<%= hotdeal.h_link %>">BUY NOW</a></span></div>
           <figcaption>
