--- a/app/views/hotdeals/show.html.erb
+++ b/app/views/hotdeals/show.html.erb
@@ -19,6 +19,7 @@
             <% end %>
           </div>
           <div class="mark"><span>HOT</span><em>DEALS</em></div>
+          <div class="show_tag"><h3><%= render_with_hashtags(@hotdeal.h_spare_05.to_s) %></h3></div>
           <% if can? :update, @hotdeal %>
             <div class="admin">
               <h4>Admin Management</h4>
