--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -112,7 +112,7 @@
 
 
   .codes .card_wrap .card .inner>.code_high{border:1px solid #ccc;padding:15px;position:relative;}
-  .codes .card_wrap .card .inner>.code_high .extra_info{display:inline-block;font-size:13px;}
+  .codes .card_wrap .card .inner>.code_high .extra_info{font-size:13px;}
 
   .codes .card_wrap .card .inner>.code_high>address{display:block;}
   .codes .card_wrap .card .inner>.code_high>address>.dis_price{color:#08f;font-size:25px;margin-right:5px;font-weight:700;}
@@ -125,7 +125,7 @@
   .codes .card_wrap .card .inner>.code_high>.admin>ul>li{float:left;margin-right:15px;}
 
   .codes .card_wrap .card .inner>.code_high .m_tooltip_common{display:none;}
-  .codes .card_wrap .card .inner>.code_high .tooltip_common{margin-left:5px;position:relative;display:inline;color:#616161;}
+  .codes .card_wrap .card .inner>.code_high .tooltip_common{position:relative;display:inline;color:#616161;}
   .codes .card_wrap .card .inner>.code_high .tooltip_common:hover .tooltip-content{visibility: visible;}
   .codes .card_wrap .card .inner>.code_high .content_common{visibility:hidden;width:400px;padding:7px 7px;color:white;text-align:center;position:absolute;z-index:5;line-height:1.2;}
   /*.codes .card_wrap .card .inner>.code_high .tooltip_red{background:#ff4d4d;}*/
@@ -138,7 +138,7 @@
   .codes .card_wrap .card .inner>.code_high .tooltip_purple .tooltip-content{background:#b400b4;}
 
   .codes .card_wrap .card .inner>.code_high>em{font-size:12px;color:#616161;display:block;}
-  .codes .card_wrap .card .inner>.code_high>em.expired{color:red;}
+  .codes .card_wrap .card .inner>.code_high>em.expired{background:red;color:#fff;display:inline-block;padding:5px 10px;border-radius:15px;float:right;}
 
   .codes .card_wrap .card .inner>.code_high>p{color:#616161;font-size:13px;display:inline;/*border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;*/}
   .codes .card_wrap .card .inner>.code_high .discounted{color:#08f;font-size:25px;margin-right:5px;font-weight:700;display:inline-block;}
@@ -147,7 +147,7 @@
   .codes .card_wrap .card .inner>.code_high>p>span{position:relative;top:0.4em;}
   .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:17px;color:#000;font-weight:500;}
   .codes .card_wrap .card .inner>.code_high>.ex_date{display:block;font-size:13px;color:#616161;margin-bottom:3px;}
-  .codes .card_wrap .card .inner>.code_high>.endtoday{color:#ffa500;}
+  .codes .card_wrap .card .inner>.code_high>.endtoday{font-size:12px;background:#ffa500;color:#fff;display:inline-block;padding:5px 10px;border-radius:15px;float:right;}
   .codes .card_wrap .card .inner>.code_high>ul{}
   .codes .card_wrap .card .inner>.code_high>ul>li{margin-bottom:10px;}
   .codes .card_wrap .card .inner>.code_high>ul>li>p{font-size:17px;}
@@ -264,6 +264,8 @@
   .codes .card_wrap .card .inner>.code_high .m_tooltip_purple .m_tooltip-content{background:#b400b4;}
 
   .codes .card_wrap .card .inner>.code_high>em{font-size:11px;color:#616161;display:block;margin-top:3px;}
+  .codes .card_wrap .card .inner>.code_high>em.expired{background:red;color:#fff;display:inline-block;padding:5px 10px;border-radius:15px;margin-left:10px;}
+  .codes .card_wrap .card .inner>.code_high>.endtoday{background:#ffa500;color:#fff;display:inline-block;padding:5px 10px;border-radius:15px;margin-left:10px;font-size:11px;}
   .codes .card_wrap .card .inner>.code_high>p{display:inline;/*border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;*/}
   .codes .card_wrap .card .inner>.code_high .discounted{color:#08f;font-size:25px;margin-right:5px;font-weight:700;display:inline-block;}
   .codes .card_wrap .card .inner>.code_high .ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
