--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -12,7 +12,7 @@
 .show_wrap .show_box .show_inner a.p_btn{width:300px;text-align:center;}
 .show_wrap .show_box .show_inner a.store_btn{width:400px;text-align:center;}
 .show_wrap .show_box .show_inner .hotdeal_inner{}
-.show_wrap .show_box .show_inner .hotdeal_inner h2{font-weight:500;line-height:1.2;font-size:18px;line-height:1.4;height:2.8em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:2}
+.show_wrap .show_box .show_inner .hotdeal_inner h2{font-weight:500;line-height:1.2;font-size:18px;line-height:1.4;height:2.8em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:2;padding:0 5px;}
 
 /*.show_wrap .show_box .show_inner .hotdeal_inner p{font-size:15px;font-weight:400;margin:15px 0;}*/
 .show_wrap .show_box .show_inner .hotdeal_inner .top_line{}
@@ -24,9 +24,10 @@
 .show_wrap .show_box .show_inner .hotdeal_inner p.offer em{font-weight:500;word-break:break-word;}
 .show_wrap .show_box .show_inner .hotdeal_inner p.offer em.pricing{color:#08f;font-weight:500;}
 .show_wrap .show_box .show_inner .hotdeal_inner h2.store_h2{font-size:20px;}
-.show_wrap .show_box .show_inner .hotdeal_inner .h_price{font-size:25px;margin-bottom:0;}
+.show_wrap .show_box .show_inner .hotdeal_inner .h_price{font-size:25px;margin-bottom:0;padding:0 5px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .h_price .span_01{color:#616161;text-decoration:line-through;font-size:20px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .h_price .span_02{margin-left:10px;font-size:20px;}
+.show_wrap .show_box .show_inner .hotdeal_inner .h_price em{font-size:13px;}
 /*.show_wrap .show_box .show_inner .hotdeal_inner .extra_info{margin:12px 0;}*/
 .show_wrap .show_box .show_inner .hotdeal_inner .extra_info .basic_info{font-weight:500;}
 .show_wrap .show_box .show_inner .hotdeal_inner .extra_info .basic_info .primeornot{display:none;}
@@ -37,6 +38,26 @@
 .show_wrap .show_box .show_inner .hotdeal_inner .extra_info em.expired{color:#fff;background:#ff0000;padding:5px 10px;width:100px;text-align:center;border-radius:15px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .extra_info em.endtoday{color:#fff;background:#ffa500;padding:5px 10px;width:110px;text-align:center;border-radius:15px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .code_btn{margin-top:30px;}
+
+.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap{margin-bottom:20px;}
+.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap a{color:#ccc;background:none;padding:0;}
+.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box{float:left;width:48%;margin:1%;text-align:center;box-shadow:0 0 20px 0 rgba(0,0,0,.06);padding:10px 5px;}
+.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .line_three{width:31.33%;}
+.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .tax_box{float:left;width:23%;margin:1%;}
+.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .total_box{width:98%;margin:1%;}
+.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box p{font-size:12px;margin:5px;color:#6d6e71;}
+.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box p a{color:#6d6e71;}
+.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box em{font-size:17px;}
+.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box em a{color:#000;}
+.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box em i:before{content: "\f08e";font-family: FontAwesome;font-style: normal;margin-left:3px;}
+.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box em .n_expired{color:#ff4d4d;}
+.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box em .n_endtoday{color:#ffa500;}
+.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box em .end_date{font-size:13px;}
+.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box em .end_soon{font-size:17px;}
+.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box em a.keyword{text-overflow:ellipsis;white-space:nowrap;word-wrap:normal;width:200px;overflow:hidden;word-break:break-word;font-size:13px;display:inline-block;}
+.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .info_box{margin-bottom:10px;}
+.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .info_box span{display:block;font-size:12px;color:#ccc;margin-left:15px;}
+.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .info_box span a{color:#08f;}
 
 .show_wrap .show_box .show_inner .hotdeal_inner .show_des{border-top:1px solid #ccc;border-bottom:1px solid #ccc;margin:10px 0 20px 0;}
 .show_wrap .show_box .show_inner .hotdeal_inner .description{font-size:15px;margin:15px 0;line-height:1.4;height:5.6em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:4}
