--- a/app/views/hotdeals/edit.html.erb
+++ b/app/views/hotdeals/edit.html.erb
@@ -10,7 +10,7 @@
         <%= f.input :himage, label: 'Choose Image' %>
         <%= f.select :h_spare_03, ([["Do You Have A Banner?", ""], "YES"])%>
         <%= f.select :h_spare_06, ([["No PRIME?", ""], "Yes"])%>
-        <%= f.select :h_spare_07, ([["In Stock", ""], "Only in a few stock left"])%>
+        <%= f.select :h_spare_07, ([["In Stock", ""], "few stock left"])%>
         <%= f.select :h_spare_10, ([["Subscribe & Save?", ""], "Yes"])%>
         <%= f.select :h_spare_12, ([["No Tax?", ""], "Yes"])%>
         <%= f.select :h_spare_13, ([["Write Blog?", ""], "Yes"])%>
