--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -40,86 +40,7 @@
         </div>
 
         <div class="show_inner">
-         <div class="hotdeal_inner">
-           <h2><%= @promocode.p_title %></h2>
-
-           <% running_total = 0 %>
-           <% running_total =  @promocode.p_spare_26 - (@promocode.p_spare_27 / 100) * @promocode.p_spare_26 %>
-           <p class="h_price"><%= number_to_currency(running_total) %> <span class="span_01"><%= number_to_currency(@promocode.p_spare_26) %></span><span class="span_02">( <%= number_to_percentage(@promocode.p_spare_27, precision: 0) %> OFF )</span></p>
-           
-           <div class="extra_info">
-            <!-- <em>Amazon is offering <span class="oneline"><%= @promocode.p_title %></span> for only <%= number_to_currency(@promocode.p_spare_26) %> when you use coupon code <%= @promocode.p_promocode %> at checkout. Shipping is free on this order.</em> -->
-            <% if @promocode.p_spare_03.present? %>
-             <span class="basic_info">
-              <% if @promocode.p_spare_01.present? %>
-                <div class="primeornot"><%= @promocode.p_spare_01 %> |</div>
-              <% else %>
-                <!-- PRIME | -->
-              <% end %>
-                Avg <%= @promocode.p_spare_03 %> | <%= number_with_delimiter(@promocode.p_spare_04) %>+ reviews 
-              <% if @promocode.p_spare_02.present? %>
-                | <%= @promocode.p_spare_02 %> 
-              <% end %>
-             </span> 
-            <% end %>
-            <% saving_total = 0 %>
-            <% saving_total =  @promocode.p_spare_26 - (@promocode.p_spare_26 - (@promocode.p_spare_27 / 100) * @promocode.p_spare_26) %>
-            <em class="save_money">* Save <%= number_to_currency(saving_total) %> or more.</em>
-
-          
-            <% if @promocode.p_extra_deal.present? %><em class="extra_dh">+ Get <%= @promocode.p_extra_deal %>% Off Extra Deal</em><% end %>
-            <% if @promocode.p_coupon_deal.present? %><em class="extra_dh">+ Save <%= @promocode.p_coupon_deal %> more by clipping coupon</em><% end %>
-            <em>+ Free Shipping ( Free Shipping: <a class="prime" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items. )</a></em>
-            <% if @promocode.p_spare_05.present? %>
-              <% @promocode.p_spare_05 %>
-              <em>+ Check via Subscribe & Save ( Save 5% Off now and up to 15% Off on auto-deliveries <span><a href="https://amzn.to/2BzWhT4" target="_blank">Learn more</a></span> )</em>
-            <% end %>
-            <% if @promocode.p_spare_07.present? %><em>+ Find more <a href="<%= @promocode.p_spare_08 %>">"<%= @promocode.p_spare_07 %>"</a></em><% end %>
-            <em>* Pricing may change and deals can expire fast.</em>
-
-
-            <% if @promocode.p_end_date.present? %>
-              <% if @promocode.p_spare_50.present? %>
-                <% if @promocode.p_spare_50 < DateTime.now %>
-                <% @promocode.p_spare_50 %>
-                  <em class="expired">EXPIRED</em>
-                <% else %>
-                  <% if @promocode.p_spare_51.present? %>
-                   <% if @promocode.p_spare_51 <= DateTime.now %>
-                   <% @promocode.p_spare_51 %>
-                    <em class="endtoday">* Expire Today</em> 
-                   <% else %>
-                    <em>* Code End Date: <%= @promocode.p_end_date %> or while supplies last.</em>
-                   <% end %> 
-                  <% end %>
-                <% end %>
-               <!-- </div> -->
-              <% else %>
-                <em>* Code End Date: <%= @promocode.p_end_date %> or while supplies last.</em>
-              <% end %>
-            <% end %>
-           </div><!--./extra_info-->
-
-           <div class="code_btn">
-             <!-- <p class="code_line">Click and copy this code then apply it at your checkout</p> -->
-             <div class="text_copied intheshow">
-              <div class="container"><div class="wrap"><div class="box"><p data-copy-text=""><%= @promocode.p_promocode %></p></div></div></div>
-             </div>
-
-             <div class="only_show promocode_btn">
-              <a class="m_btn p_btn" target="_blank" href="<%= @promocode.p_link %>">Check it out on &ensp;<em>Amazon</em></a>
-             </div> 
-            </div>
-
-            <% if @promocode.p_spare_36.present? %>
-              <div class="trix trix-container gradient"><span>Features</span><p><%= @promocode.p_spare_36.html_safe %></p><button class="show-btn fa fa-chevron-down"></button></div>
-            <% else %>
-              <% if @promocode.p_description.present? %>
-                <div class="show_des"><p class="description"><%= @promocode.p_description %></p></div>
-              <% end %>
-            <% end %>
-            
-          </div>
+          <%= render 'promocodes/usa_ver2' %>
         </div>
 
         <% if can? :update, @promocode %>
