--- a/app/views/hotdeals/_usa_ver2.html.erb
+++ b/app/views/hotdeals/_usa_ver2.html.erb
@@ -38,7 +38,7 @@
       <% end %>
     </div>
     <div class="info_box">
-      <span>* Free Shipping ( Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items. )</span>
+      <span>* Free Shipping: $25+ of eligible items, fulfilled by Amazon or <a target="_blank" href="/blogs/blog_01_amz_prime">Prime<i></i></a></span>
       <span>* Average rating and reviews may change after posted.</span>
     </div> 
 
