--- a/app/views/deals/_header_store.html.erb
+++ b/app/views/deals/_header_store.html.erb
@@ -3,6 +3,7 @@
   <button class="gnb_open_b"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button>
     <div class="sub_nav_pc">
       <ul class="clearfix">
+        <li><a href="/deals/stores">Home</a></li>
         <li class="coumos1"><a href="/storepromotions">Sales Offer & Promotions</a></li>
         <li><a href="/storedeals">Bargains</a></li>
         <!-- <li><a href="/deals/most_reviewed">Most-Reviewed</a></li>
@@ -13,6 +14,7 @@
     
     <div class="gnb_m">
       <ul class="clearfix">
+        <li><a href="/deals/stores">Home</a></li>
         <li class="coumos1"><a href="/storepromotions">Sales Offer & Promotions</a></li>
         <li><a href="/storedeals">Bargains</a></li>
       </ul>
