--- a/app/views/storedeals/_storedeal.html.erb
+++ b/app/views/storedeals/_storedeal.html.erb
@@ -1,4 +1,4 @@
-<figure class="deals_card">
+<figure class="deals_card sotre_card">
    <div class="image_box">
     <%= link_to image_tag(storedeal.sd_image, alt: storedeal.sd_title, title: storedeal.sd_image_title), storedeal %>
     <% if storedeal.sd_percentage.present? %>
