--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -706,7 +706,6 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 #tab4:checked ~ .tab-content-wrapper #tab-content-4{position:relative;top: 0px;}
 
 
-
 /* all_deals */
 .all_wrap{}
 .all_wrap .check_more{background:#000;color:#fff;padding:10px;}
@@ -739,112 +738,21 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 .for_sns .wrapping .info a{color:#08f;font-size:20px;}
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-#google_translate_element {
-  position: absolute;
-  bottom: calc(53px + 16px);
-  right: 16px !important;
-  background:#000;
-}
-
-.goog-te-gadget {
-  font-family: Roboto, "Open Sans", sans-serif !important;
-  text-transform: uppercase;
-}
-
-.goog-te-gadget-simple {
-  background-color: rgba(255, 255, 255, 0.2) !important;
-  border: 1px solid rgba(255, 255, 255, 0.5) !important;
-  padding: 8px !important;
-  border-radius: 4px !important;
-  font-size: 1rem !important;
-  line-height: 2rem !important;
-  display: inline-block;
-  cursor: pointer;
-  zoom: 1;
-}
-
-.goog-te-menu2 {
-  max-width: 100%;
-}
-
-.goog-te-menu-value {
-  color: #fff !important;
-}
-.goog-te-menu-value:before {
-  font-family: 'Material Icons';
-  content: "\E927";
-  margin-right: 16px;
-  font-size: 2rem;
-  vertical-align: -10px;
-}
-
-.goog-te-menu-value span:nth-child(5) {
-  display: none;
-}
-
-.goog-te-menu-value span:nth-child(3) {
-  border: none !important;
-  font-family: 'Material Icons';
-}
-.goog-te-menu-value span:nth-child(3):after {
-  font-family: 'Material Icons';
-  content: "\E5C5";
-  font-size: 1.5rem;
-  vertical-align: -6px;
-}
-
-.goog-te-gadget-icon {
-  background-image: url(https://placehold.it/32) !important;
-  background-position: 0px 0px;
-  height: 32px !important;
-  width: 32px !important;
-  margin-right: 8px !important;
-  display: none;
-}
-
-.goog-te-banner-frame.skiptranslate {
-  display: none !important;
-}
-
-
-/* ================================== *\
-    Mediaqueries
-\* ================================== */
+/* Google Translate */
+#google_translate_element{position: absolute;bottom:calc(53px + 16px);right:16px !important;background:#000;}
+.goog-te-gadget{font-family:Roboto, "Open Sans", sans-serif !important;text-transform:uppercase;}
+.goog-te-gadget-simple{background-color:rgba(255, 255, 255, 0.2) !important;border:1px solid rgba(255, 255, 255, 0.5) !important;padding:8px !important;border-radius:4px !important;font-size:1rem !important;line-height:2rem !important;display:inline-block;cursor:pointer;zoom:1;}
+.goog-te-menu2{max-width:100%;}
+.goog-te-menu-value{color:#fff !important;}
+.goog-te-menu-value:before{font-family:'Material Icons';content:"\E927";margin-right:16px;font-size:2rem;vertical-align:-10px;}
+.goog-te-menu-value span:nth-child(5){display:none;}
+.goog-te-menu-value span:nth-child(3){border:none !important;font-family:'Material Icons';}
+.goog-te-menu-value span:nth-child(3):after{font-family:'Material Icons';content:"\E5C5";font-size:1.5rem;vertical-align:-6px;}
+.goog-te-gadget-icon{background-image:url(https://placehold.it/32) !important;background-position:0px 0px;height:32px !important;width:32px !important;margin-right:8px !important;display:none;}
+.goog-te-banner-frame.skiptranslate{display:none !important;}
 @media (max-width: 667px) {
-  #google_translate_element {
-    bottom: calc(100% - 50% - 53px);
-    left: 16px !important;
-    width: 100% !important;
-  }
-  #google_translate_element goog-te-gadget {
-    width: 100% !important;
-  }
-  #google_translate_element .skiptranslate {
-    width: 100% !important;
-  }
-  #google_translate_element .goog-te-gadget-simple {
-    width: calc(100% - 32px) !important;
-    text-align: center;
-  }
+  #google_translate_element{bottom:calc(100% - 50% - 53px);left:16px !important;width:100% !important;}
+  #google_translate_element goog-te-gadget{width:100% !important;}
+  #google_translate_element .skiptranslate{width:100% !important;}
+  #google_translate_element .goog-te-gadget-simple{width:calc(100% - 32px) !important;text-align:center;}
 }
