--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -70,7 +70,7 @@ header .visual img{width:100%;}
 header .gnb_pc>ul{float:right;margin-top:-6px;position:relative;font-family: 'Righteous', cursive;margin-left:50px;}
 header .gnb_pc>ul>li.membership>a{font-size:20px;}
 header .gnb_pc>ul.sub_index_02{float:left;} /* for index_02 */
-header .gnb_pc>ul>li{float:left;width:340px;text-align:center;}
+header .gnb_pc>ul>li{float:left;text-align:center;}
 header .gnb_pc>ul.sub_index_02>li{float:left;width:300px;text-align:center;margin-right:20px;} /* for index_02 */
 header .gnb_pc>ul>li:nth-child(3){width:277px;}
 header .gnb_pc>ul>li>a{font-size:60px;text-decoration:none;color:#000;line-height:60px;display:inline-block;font-weight:600;}
@@ -89,9 +89,9 @@ header .gnb_m,header .gnb_open2{display:none;}
   header.on .visual{float:left;margin-top:18px;height:100%;}
   header.on .visual img{width:260px;}
   header.on .gnb_pc>ul{float:left;margin:0 0 0 20px;padding:10px 0;}
-  header.on .gnb_pc>ul>li{float:left;width:100px;font-weight:400;text-align:center;}
+  header.on .gnb_pc>ul>li{float:left;font-weight:400;text-align:center;margin-right:25px;}
   header.on .gnb_pc>ul>li:nth-child(3){width:100px;}
-  header.on .gnb_pc>ul>li>a{font-size:15px;line-height:50px;}
+  header.on .gnb_pc>ul>li>a{font-size:25px;line-height:50px;}
   header.on .gnb_pc>ul>li>a.active{background:#000;padding:0 10px;color:#fff;}
   header.on .gnb_pc>ul>li>a>em{display:inline-block;}
   header.on .gnb_pc>ul>li>a>span{display:none;}
@@ -121,11 +121,13 @@ header .gnb_m,header .gnb_open2{display:none;}
 }
 
 @media screen and (min-width:681px) and (max-width:1199px){
+  header.on .gnb_pc>ul>li{margin-right:16px;}
+  header.on .gnb_pc>ul>li>a{font-size:20px;}
   header .gnb_pc{margin-top:10px;text-align:center;}
   header .visual{}
   header .visual img{width:100%;}
   header .gnb_pc>ul{float:right;margin-top:0px;}
-  header .gnb_pc>ul>li{float:left;width:180px;text-align:center;}
+  header .gnb_pc>ul>li{float:left;text-align:center;}
   header .gnb_pc>ul>li:nth-child(3){width:149px;}
   header .gnb_pc>ul>li>a{font-size:30px;line-height:1;}
   .index_header .on{border-bottom:1px solid #ccc;height:60px;}
