--- a/app/views/promocodes/_usa_ver2.html.erb
+++ b/app/views/promocodes/_usa_ver2.html.erb
@@ -3,7 +3,7 @@
 
  <% running_total = 0 %>
  <% running_total =  @promocode.p_spare_26 - (@promocode.p_spare_27 / 100) * @promocode.p_spare_26 %>
- <p class="h_price"><%= number_to_currency(running_total) %> <span class="span_01"><%= number_to_currency(@promocode.p_spare_26) %></span><span class="span_02">( <%= number_to_percentage(@promocode.p_spare_27, precision: 0) %> OFF ) <em>with Promo Code</em></span></p>
+ <p class="h_price"><%= number_to_currency(running_total) %> <span class="span_01"><%= number_to_currency(@promocode.p_spare_26) %></span><span class="span_02">( <%= number_to_percentage(@promocode.p_spare_27, precision: 0) %> OFF ) </span></p><em>with Promo Code</em>
 
  <!--  <div class="box">
     <p></p>
@@ -12,99 +12,115 @@
 
  <div class="info_wrap clearfix">
 
-    <div class="box line_three">
-      <p>Shipping</p>
-      <em>Free</em>
-    </div>
-    <div class="box line_three">
-      <p>Rating</p>
-      <% if @promocode.p_spare_03.present? %>
-        <em>Avg. <%= @promocode.p_spare_03 %> / 5.0</em>
-      <% else %>
-        <em>-</em>
-      <% end %>
-    </div>
-    <div class="box line_three">
-      <p>Reviews</p>
-      <% if @promocode.p_spare_04.present? %>
-        <em><%= number_with_delimiter(@promocode.p_spare_04) %>+</em>
-      <% else %>
-        <em>-</em>
-      <% end %>
-    </div>
-    <div class="info_box">
-      <span>* Free Shipping: $25+ of eligible items, fulfilled by Amazon or <a target="_blank" href="/blogs/blog_01_amz_prime">Prime<i></i></a></span>
-      <span>* Average rating and reviews may change after posted.</span>
-    </div>
-
-    <div class="box line_three">
-      <p>Savings via code</p>
-      <em>
-         <% saving_total = 0 %>
-         <% saving_total =  @promocode.p_spare_26 - (@promocode.p_spare_26 - (@promocode.p_spare_27 / 100) * @promocode.p_spare_26) %>
-         <%= number_to_currency(saving_total) %>
-      </em>
-    </div>
-    <div class="box line_three">
-      <p>Coupon</p>
-      <% if @promocode.p_coupon_deal.present? %>
-        <em><%= @promocode.p_coupon_deal %></em>
-      <% else %>
-        <em>-</em>
-      <% end %>
-    </div>
-    <div class="box line_three">
-      <p>On Sale</p>
-      <% if @promocode.p_extra_deal.present? %>
-        <em><%= @promocode.p_extra_deal %>%</em>
-      <% else %>
-        <em>-</em>
-      <% end %>
-    </div>
-    <div class="info_box">
-      <% if @promocode.p_coupon_deal.present? %>
-        <span>* Check coupon on detail page to receive your extra savings.</span>
-      <% end %>
-      <% if @promocode.p_extra_deal.present? %>
-        <span>* This item is on sale now and get extra discount via promo code.</span>
-      <% end %>
-    </div>
-
-    <div class="box">
-      <p>End Date</p>
-      <em>
-        <% if @promocode.p_end_date.present? %>
-          <% if @promocode.p_spare_50.present? %>
-            <% if @promocode.p_spare_50 < DateTime.now %>
-            <% @promocode.p_spare_50 %>
-              <em class="n_expired">EXPIRED</em>
-            <% else %>
-              <% if @promocode.p_spare_51.present? %>
-               <% if @promocode.p_spare_51 <= DateTime.now %>
-               <% @promocode.p_spare_51 %>
-                <em class="n_endtoday">End Today</em> 
-               <% else %>
-                <em class="end_date"><%= @promocode.p_end_date %></em>
-               <% end %> 
-              <% end %>
-            <% end %>
-           <!-- </div> -->
-          <% else %>
-            <em><%= @promocode.p_end_date %></em>
-          <% end %>
+    <div class="block clearfix">
+      <div class="box line_three">
+        <p>Shipping</p>
+        <em>Free</em>
+      </div>
+      <div class="box line_three">
+        <p>Rating</p>
+        <% if @promocode.p_spare_03.present? %>
+          <em>Avg. <%= @promocode.p_spare_03 %> / 5.0</em>
         <% else %>
-         <em class="end_soon">End Soon</em>
+          <em>-</em>
         <% end %>
-      </em>
+      </div>
+      <div class="box line_three">
+        <p>Reviews</p>
+        <% if @promocode.p_spare_04.present? %>
+          <em><%= number_with_delimiter(@promocode.p_spare_04) %>+</em>
+        <% else %>
+          <em>-</em>
+        <% end %>
+      </div>
+    </div>
+    <div class="info_box">
+      <span>
+        <ul>
+          <li>Free Shipping: $25+ of eligible items, fulfilled by Amazon or <a target="_blank" href="/blogs/blog_01_amz_prime">Prime<i></i></a></li>      
+          <li>Average rating and reviews may change after posted.</li>
+        <ul>
+      </span>
+    </div>
+
+    <div class="block clearfix">
+      <div class="box line_three">
+        <p>Savings via code</p>
+        <em>
+           <% saving_total = 0 %>
+           <% saving_total =  @promocode.p_spare_26 - (@promocode.p_spare_26 - (@promocode.p_spare_27 / 100) * @promocode.p_spare_26) %>
+           <%= number_to_currency(saving_total) %>
+        </em>
+      </div>
+      <div class="box line_three">
+        <p>Coupon</p>
+        <% if @promocode.p_coupon_deal.present? %>
+          <em><%= @promocode.p_coupon_deal %></em>
+        <% else %>
+          <em>-</em>
+        <% end %>
+      </div>
+      <div class="box line_three">
+        <p>On Sale</p>
+        <% if @promocode.p_extra_deal.present? %>
+          <em><%= @promocode.p_extra_deal %>%</em>
+        <% else %>
+          <em>-</em>
+        <% end %>
+      </div>
+    </div>
+    <div class="info_box">
+      <span>
+        <ul>
+          <% if @promocode.p_coupon_deal.present? %>
+            <li>Check coupon on detail page to receive your extra savings.</li>
+          <% end %>
+          <% if @promocode.p_extra_deal.present? %>
+            <li>This item is on sale now and get extra discount via promo code.</li>
+          <% end %>
+        </ul>
+      </span>
+    </div>
+
+    <div class="block clearfix">
+      <div class="box">
+        <p>End Date</p>
+        <em>
+          <% if @promocode.p_end_date.present? %>
+            <% if @promocode.p_spare_50.present? %>
+              <% if @promocode.p_spare_50 < DateTime.now %>
+              <% @promocode.p_spare_50 %>
+                <em class="n_expired">EXPIRED</em>
+              <% else %>
+                <% if @promocode.p_spare_51.present? %>
+                 <% if @promocode.p_spare_51 <= DateTime.now %>
+                 <% @promocode.p_spare_51 %>
+                  <em class="n_endtoday">End Today</em> 
+                 <% else %>
+                  <em class="end_date"><%= @promocode.p_end_date %></em>
+                 <% end %> 
+                <% end %>
+              <% end %>
+             <!-- </div> -->
+            <% else %>
+              <em class="end_date"><%= @promocode.p_end_date %></em>
+            <% end %>
+          <% else %>
+           <em class="end_soon">End Soon</em>
+          <% end %>
+        </em>
+      </div>
     </div>
     <!-- <div class="info_box">
       <span>* </span>
     </div> -->
 
     <% if @promocode.p_spare_07.present? %>
-      <div class="box">
-        <p>Search more by Keyword</p>
-        <em><a class="keyword" href="<%= @promocode.p_spare_08 %>"><%= @promocode.p_spare_07 %></a><i></i></em>
+      <div class="block clearfix">
+        <div class="box">
+         <p>Search more by Keyword</p>
+         <em><a class="keyword" href="<%= @promocode.p_spare_08 %>"><%= @promocode.p_spare_07 %></a><i></i></em>
+        </div>
       </div>
     <% end %>
 
