--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -83,7 +83,7 @@
   .codes .card_wrap .dealofday{height:auto;}
   .codes .card_wrap .card .image_box{float:left;width:20%;height:167px;padding:1.5%;}
   .codes .card_wrap .card .image_box img{width:100%;height:167px;object-fit:contain;}
-  .codes .card_wrap .card .image_box a{display:block;}
+  .codes .card_wrap .card .image_box a{display:inline-block;}
   .codes .card_wrap .card .image_box .rating{}
   .codes .card_wrap .card .image_box .rating img{width:100px;height:22px;}
   .codes .card_wrap .card .image_box .rating p{margin-left:2%;font-size:13px;}
@@ -156,6 +156,12 @@
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>a{text-decoration:none;color:#08f;font-size:13px;text-overflow:ellipsis;white-space:nowrap;word-wrap:normal;width:400px;overflow:hidden;display:inline-block;line-height:11px;}
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span{margin-left:20px;}
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span>em{font-size:11px;text-decoration:line-through;color:#616161;margin-left:1%;}
+
+  .codes .card_wrap .card .inner>.code_high .info_wrap{}
+  .codes .card_wrap .card .inner>.code_high .info_wrap .box{float:left;width:23%;margin:1%;text-align:center;box-shadow:0 0 20px 0 rgba(0,0,0,.06);padding:5px;}
+  .codes .card_wrap .card .inner>.code_high .info_wrap .box p{font-size:12px;margin:5px;color:#6d6e71;}
+  .codes .card_wrap .card .inner>.code_high .info_wrap .box em{font-size:20px;}
+
   .codes .card_wrap .card .deal_btn{float:left;width:20%;text-align:center;margin:60px 1.5% 0 1.5%;}
   .codes .card_wrap .card .promo_btn{margin-top:90px;}
   .codes .card_wrap .card .deal_btn a{text-decoration:none;color:#000;display:inline-block;font-family: 'Montserrat', sans-serif;font-weight:bold;border:3px solid #000;padding:10px 5px;}
@@ -250,23 +256,26 @@
   .codes .card_wrap .card .inner>.code_high>.admin>ul{}
   .codes .card_wrap .card .inner>.code_high>.admin>ul>li{float:left;margin-right:15px;}
 
-  .codes .card_wrap .card .inner>.code_high .tooltip_common{display:none;}
+  .codes .card_wrap .card .inner>.code_high .info_wrap{}
+  .codes .card_wrap .card .inner>.code_high .info_wrap .box{float:left;width:23%;margin:1%;text-align:center;box-shadow:0 0 20px 0 rgba(0,0,0,.06);padding:5px;}
+  .codes .card_wrap .card .inner>.code_high .info_wrap .box p{font-size:12px;margin:5px;color:#6d6e71;}
+  .codes .card_wrap .card .inner>.code_high .info_wrap .box em{font-size:15px;}
+
+  /*.codes .card_wrap .card .inner>.code_high .tooltip_common{display:none;}
   .codes .card_wrap .card .inner>.code_high .m_tooltip_common{display:block;position:relative;display:inline;color:#616161;}
   .codes .card_wrap .card .inner>.code_high .m_tooltip_common:hover .m_tooltip-content{visibility: visible;}
   .codes .card_wrap .card .inner>.code_high .m_content_common{visibility:hidden;width:355px;padding:7px 7px;color:white;position:absolute;z-index:1;line-height:1.2;}
-  /*.codes .card_wrap .card .inner>.code_high .m_tooltip_red{background:#ff4d4d;}*/
   .codes .card_wrap .card .inner>.code_high .m_tooltip_red .m_tooltip-content{background:#ff4d4d;}
-  /*.codes .card_wrap .card .inner>.code_high .m_tooltip_green{background:#87c442;}*/
   .codes .card_wrap .card .inner>.code_high .m_tooltip_green .m_tooltip-content{background:#87c442;}
-  /*.codes .card_wrap .card .inner>.code_high .m_tooltip_orange{background:#e47911;}*/
   .codes .card_wrap .card .inner>.code_high .m_tooltip_orange .m_tooltip-content{background:#e47911;}
-  /*.codes .card_wrap .card .inner>.code_high .m_tooltip_purple{background:#b400b4;}*/
-  .codes .card_wrap .card .inner>.code_high .m_tooltip_purple .m_tooltip-content{background:#b400b4;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltip_purple .m_tooltip-content{background:#b400b4;}*/
 
+  .codes .card_wrap .card .inner>.code_high>ul.exp{}
+  .codes .card_wrap .card .inner>.code_high>ul.exp>li{list-style:disc;font-size:11px;color:#616161;display:block;margin-top:3px;}
   .codes .card_wrap .card .inner>.code_high>em{font-size:11px;color:#616161;display:block;margin-top:3px;}
   .codes .card_wrap .card .inner>.code_high>em.expired{background:red;color:#fff;display:inline-block;padding:5px 10px;border-radius:15px;margin-left:10px;}
   .codes .card_wrap .card .inner>.code_high>.endtoday{background:#ffa500;color:#fff;display:inline-block;padding:5px 10px;border-radius:15px;margin-left:10px;font-size:11px;}
-  .codes .card_wrap .card .inner>.code_high>p{display:inline;/*border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;*/}
+  .codes .card_wrap .card .inner>.code_high>p{display:inline;}
   .codes .card_wrap .card .inner>.code_high .discounted{color:#08f;font-size:25px;margin-right:5px;font-weight:700;display:inline-block;}
   .codes .card_wrap .card .inner>.code_high .ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
   .codes .card_wrap .card .inner>.code_high>.mobile_code{display:block;}
@@ -283,7 +292,7 @@
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span{}
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span>em{font-size:11px;text-decoration:line-through;color:#616161;margin-left:1%;}
   .codes .card_wrap .card .deal_btn{float:none;width:100%;margin:0 0 10px 0;text-align:center;}
-  .codes .card_wrap .card .deal_btn a{font-size:18px;text-decoration:none;padding:10px 20px;font-family: 'Montserrat', sans-serif;background:#000;color:#fff;display:block;}
+  .codes .card_wrap .card .deal_btn a{font-size:18px;text-decoration:none;padding:10px 20px;font-family: 'Montserrat', sans-serif;background:#000;color:#fff;display:block;border-radius:20px;}
   .codes .card_wrap .card .deal_btn em{display:none;}
   .codes .card_wrap .card .deal_btn em.stock_m{color:#ff4d4d;text-align:left;margin-left:7px;display:block;margin-bottom:-20px;}
   .codes .card_wrap .card .deal_btn p{color:#ff3333;margin-top:10px;}
@@ -324,22 +333,20 @@
   .codes .card_wrap .card .inner>.code_high>p>span>.m_codes{background:#000;color:#fff;padding:5px 10px;border-radius:10px;line-height:38px;}
   .codes .card_wrap .card .deal_btn em{display:block;font-size:9px;padding:5px 14.5px;}
   
-  .codes .card_wrap .card .inner>.code_high .tooltip_common{display:none;}
+  /*.codes .card_wrap .card .inner>.code_high .tooltip_common{display:none;}
   .codes .card_wrap .card .inner>.code_high .m_tooltip_common{display:block;position:relative;display:inline;color:#616161;}
   .codes .card_wrap .card .inner>.code_high .m_tooltip_common:hover .m_tooltip-content{visibility: visible;}
   .codes .card_wrap .card .inner>.code_high .m_content_common{visibility:hidden;width:370px;padding:7px 7px;color:white;text-align:center;position:absolute;z-index:1;line-height:1.2;}
-  /*.codes .card_wrap .card .inner>.code_high .m_tooltip_red{background:#ff4d4d;}*/
   .codes .card_wrap .card .inner>.code_high .m_tooltip_red .m_tooltip-content{background:#ff4d4d;}
-  /*.codes .card_wrap .card .inner>.code_high .m_tooltip_green{background:#87c442;}*/
   .codes .card_wrap .card .inner>.code_high .m_tooltip_green .m_tooltip-content{background:#87c442;}
-  /*.codes .card_wrap .card .inner>.code_high .m_tooltip_orange{background:#e47911;}*/
   .codes .card_wrap .card .inner>.code_high .m_tooltip_orange .m_tooltip-content{background:#e47911;}
-  /*.codes .card_wrap .card .inner>.code_high .m_tooltip_purple{background:#b400b4;}*/
-  .codes .card_wrap .card .inner>.code_high .m_tooltip_purple .m_tooltip-content{background:#b400b4;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltip_purple .m_tooltip-content{background:#b400b4;}*/
 
   .codes .lt_cnt .most_h_wrap .bottom_line{display:none;}
   .codes .lt_cnt .most_hotdeal .image img{height:150px;object-fit:contain;}
   .codes .lt_cnt .most_hotdeal{float:left;width:46%;margin:1% 2%;}
+
+  .codes .card_wrap .card .inner>.code_high .info_wrap .box em{font-size:15px;}
 }
 
 /* Section Coupons */
